--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+    <dependency>
+      <groupId>edu.mayo.kmdp</groupId>
+      <artifactId>kmdp-asset-surrogate</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
