--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>kmdp-bom</artifactId>
     <groupId>edu.mayo.kmdp</groupId>
-    <version>7.0.0-SNAPSHOT</version>
+    <version>7.0.0</version>
   </parent>
 
   <artifactId>API4KP-examples</artifactId>
   <groupId>org.omg.spec</groupId>
-  <version>7.0.0-SNAPSHOT</version>
+  <version>7.0.0</version>
   <packaging>jar</packaging>
   <modelVersion>4.0.0</modelVersion>
 
@@ -30,7 +30,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-    <kmdp.servers.version>3.7.0-SNAPSHOT</kmdp.servers.version>
+    <kmdp.servers.version>3.7.0</kmdp.servers.version>
   </properties>
 
   <dependencies>
